# qobuz-api-rust

./: Cargo.toml
metadata_test/scripts/: compare_metadata.rs  download_tracks.rs  generate_report.rs  run_extraction.rs
src/: main.rs  utils.rs
src/api/: service.rs
src/api/content/: albums.rs  tracks.rs
src/metadata/: embedder.rs
src/models/: album.rs  artist.rs  track.rs
